# christmas_puzzler_2021

./: README.md
TuringMachine/: make_TM_spec.ipynb  pyproject.toml  turing_machine_spec.txt
VisualDissimilarity/: pyproject.toml  scramble_text.ipynb
