[tool.poetry]
name = "puzzler"
version = "0.1.0"
description = ""
authors = ["Billiejoe Charlton <billiejoe@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
