[tool.poetry]
name = "visualdissimilarity"
version = "0.1.0"
description = ""
authors = ["Billiejoe Charlton <billiejoe@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.5"
pandas = "^1.3.5"
hungarian-algorithm = "^0.1.11"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
